# neon-serde

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: main.yaml
src/: de.rs  errors.rs  lib.rs  ser.rs
test/: package.json
